components/navigation/header.module.css
.Container {
  @apply sticky top-0 w-screen z-30 border-b;
  @apply bg-white !important;
}

.stickyContainer {
  @apply h-12 border-b-gray-30 top-0;
}

.standardContainer {
  @apply border-b-white h-24;
}

:global(.dark) .Container {
  @apply bg-gray-100 !important;
}

:global(.dark) .stickyContainer {
  @apply border-b-gray-80 !important;
}

:global(.dark) .standardContainer {
  @apply border-b-gray-100 !important;
}

.Navigation {
  @apply container px-4 flex items-center justify-between relative transition-all mx-auto h-full;
}

.LogoContainer {
  @apply flex items-center m-0 text-base tracking-tight;
}

.LogoText {
  @apply hidden xl:block m-0 font-normal ml-4 relative top-px;
  @apply text-gray-90 !important;
}

:global(.dark) .LogoText {
  @apply text-white !important;
}

.NavigationContainer {
  @apply flex items-center flex-auto justify-self-end gap-4 lg:gap-6;
}

.Container nav section i {
  @apply text-gray-70;
}

